// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableEmpty rendering renders expected elements 1`] = `
<div
  aria-live="polite"
  className="Table__empty"
  id="test"
>
  Test
</div>
`;

exports[`TableEmpty rendering renders expected elements when className is set 1`] = `
<div
  aria-live="polite"
  className="Table__empty TestClass"
  id="test"
>
  Test
</div>
`;
